# previsao_macro

./: 01-bibliotecas.py  02-funcoes.py  03-coleta.py  04-tratamento.py  05-disponibilizacao.py  06-ipca.py  07-cambio.py  08-pib.py  09-selic.py  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: base_de_dados.yml
dados/: cambio.csv  df_anual.parquet  df_diaria.parquet  df_mensal.parquet  df_trimestral.parquet  ipca.csv  pib.csv  selic.csv
previsao/: cambio.parquet  df_anual.parquet  ipca.parquet  pib.parquet  selic.parquet
